feat: incremental build